Deployed starting template

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepag": "https://Vss4969.github.io/Vss4969.github.io",
+  "homepag": "https://Vss4969.github.io",
   "name": "my-portfolio",
   "version": "0.1.0",
   "private": true,
